--- a/joomla/Dockerfile_install
+++ b/joomla/Dockerfile_install
@@ -5,18 +5,9 @@
 FROM php:8.0-apache
 
 WORKDIR /app
-
-RUN apt-get update
-RUN apt-get install -y zlib1g-dev \
-    libzip-dev \
-    libpng-dev \
-    libicu-dev
-
-RUN docker-php-ext-configure zip
+RUN chmod -R 777 /app
 
 RUN docker-php-ext-install mysqli zip gd intl && docker-php-ext-enable mysqli zip gd intl
-
-COPY ./app /app
 
 
 # Parametre d apache
