--- a/mariadb/Dockerfile
+++ b/mariadb/Dockerfile
@@ -5,3 +5,11 @@
 FROM mariadb
 
 
+ENV MARIADB_ROOT_PASSWORD=root
+ENV MARIADB_USER=ead_user
+ENV MARIADB_PASSWORD=ead_password
+ENV MARIADB_DATABASE=ead_joomla
+
+COPY ./db/ /docker-entrypoint-initdb.d/
+
+
