--- a/joomla/Dockerfile_install
+++ b/joomla/Dockerfile_install
@@ -7,6 +7,14 @@ FROM php:8.0-apache
 WORKDIR /app
 RUN chmod -R 777 /app
 
+
+RUN apt-get update && apt-get install -y \
+    zlib1g-dev \
+    libzip-dev \
+    libpng-dev \
+    libicu-dev
+
+
 RUN docker-php-ext-install mysqli zip gd intl && docker-php-ext-enable mysqli zip gd intl
 
 
